data/diff_tests/wasmtime/if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_27.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\02\90\80\80\80\00\01\03\65\6e\76\08\65"
    "\78\74\5f\66\75\6e\63\00\00\03\82\80\80\80\00\01"
    "\00\0a\9f\80\80\80\00\01\99\80\80\80\00\01\02\7f"
    "\10\00\21\00\10\00\21\01\20\00\20\01\6a\04\7f\41"
    "\2a\05\41\00\0b\0b"
  )
""
)